# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## Unreleased

### [1.0.5] - 5-2-18
### Added
- Allow configurable PHP memory limit

## [1.0.4] - 4-17-18
### Changed
- Fixed curl command for installing mailhog.

## [1.0.3] - 4-17-18
### Added
- Added mhsendmail binary for routing mail to mailhog.

## [1.0.2] - 4-17-18
### Changed
- Toggle XDebug on/off in a way that doesn't require deleting the file.

## [1.0.1] - 3-8-18

### Added
- Add a dev variant with xdebug, blackfire, etc.

### Changed
- Disable CRLF warnings on git operations

## [1.0.0] - 2-2-18
Changed
- Update to PHP 7.1.

Removed
- Remove unused redis extension.

## [0.1.0] - 2-1-18
### Added
- imagick PHP extension